test/libyul/yulSyntaxTests/builtin_identifier_2.yul
{
	function add() {}
}
// ----
// ParserError 5568: (12-15='add'): Cannot use builtin function name "add" as identifier name.
